Fix Dark Mode coverage of main

--- a/website2/app/src/routes/index/menu.css
+++ b/website2/app/src/routes/index/menu.css
@@ -78,6 +78,12 @@ nav#main-menu li:not(:first-of-type) {
     color: var(--season-text);
 }
 
+.app-shell > * {
+    height: 100%;
+    background: var(--background);
+    color: var(--color);
+}
+
 @media(max-width: 999px) {
     [data-route=""] > div {
         width: 100%;
